Fixed grunt bugs & starting to create the UI

--- a/yannotate-app/app/index.html
+++ b/yannotate-app/app/index.html
@@ -17,6 +17,7 @@
       window.EmberENV = {{EMBER_ENV}};
     </script>
     <script src="assets/vendor.js"></script>
+    <script src="db/fixtures.js"></script>
     <script src="assets/yannotate-app.js"></script>
     <script>
       window.YannotateApp = require('yannotate-app/app')['default'].create({{APP_CONFIG}});
