--- a/sample-app/app/index.html
+++ b/sample-app/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>YannotateApp</title>
+    <title>LoLImprove Annotate sample application</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{BASE_TAG}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    <link rel="stylesheet" href="assets/yannotate-app.css">
+    <link rel="stylesheet" href="assets/annotate-app.css">
   </head>
   <body>
     <script>
@@ -18,9 +18,9 @@
     </script>
     <script src="assets/vendor.js"></script>
     <script src="db/fixtures.js"></script>
-    <script src="assets/yannotate-app.js"></script>
+    <script src="assets/sample-app.js"></script>
     <script>
-      window.YannotateApp = require('yannotate-app/app')['default'].create({{APP_CONFIG}});
+      window.SampleApp = require('sample-app/app')['default'].create({{APP_CONFIG}});
     </script>
   </body>
 </html>
